# pybliometrics

./: .pre-commit-config.yaml  CONTRIBUTING.rst  README.rst  Taskfile.yml  gemini.md  julia.md  log.md  pyproject.toml  requirements-dev.txt  ruff.toml
.github/workflows/: ci.yml  main.yml
docs/: __init__.py  conf.py  configuration.rst
meta/: CHANGES.rst
pybliometrics/: __init__.py  conftest.py  exception.py
pybliometrics/sciencedirect/: __init__.py  article_entitlement.py  article_metadata.py  article_retrieval.py  nonserial_title.py  object_metadata.py  object_retrieval.py  sciencedirect_search.py  subject_classifications.py
pybliometrics/sciencedirect/tests/: __init__.py  conftest.py  test_ScienceDirectSearch.py  test_SerialTitle.py  test_SubjectClassifications.py  test_article_entitlement.py  test_article_metadata.py  test_article_retrieval.py  test_nonserial_title.py  test_object_metadata.py  test_object_retrieval.py
pybliometrics/scopus/: __init__.py  abstract_citation.py  abstract_retrieval.py  affiliation_retrieval.py  affiliation_search.py  author_retrieval.py  author_search.py  plumx_metrics.py  scopus_search.py  serial_search.py  serial_title.py  subject_classifications.py
pybliometrics/scopus/tests/: __init__.py  conftest.py  test_AbstractRetrieval.py  test_AffiliationRetrieval.py  test_AffiliationSearch.py  test_AuthorRetrieval.py  test_AuthorSearch.py  test_CitationOverview.py  test_PlumXMetrics.py  test_ScopusSearch.py  test_SerialSearch.py  test_SerialTitle.py  test_SubjectClassifications.py
pybliometrics/superclasses/: __init__.py  base.py  retrieval.py  search.py
pybliometrics/tests/: test_version.py
pybliometrics/utils/: __init__.py  checks.py  constants.py  create_config.py  get_content.py  parse_content.py  startup.py
pybliometrics/utils/tests/: test_startup.py
