[build-system]
requires = ["setuptools>=69.1", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pybliometrics"
authors = [{name = "'John Kitchin and Michael E. Rose", email = "Michael.Ernst.Rose@gmail.com"}]
maintainers = [{name = "Michael E. Rose", email = "Michael.Ernst.Rose@gmail.com"}]
description = "Python-based API-Wrapper to access Scopus and ScienceDirect"
readme = "README.rst"
license = "MIT"
dependencies = [
    "requests",
    "tqdm",
    "urllib3",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Documentation :: Sphinx"
]
keywords = ["scopus"]
dynamic = ["version"]
requires-python = ">=3.9,<=3.13"

[project.urls]
Homepage = "https://github.com/pybliometrics-dev/pybliometrics"
"Bug Tracker" = "https://github.com/pybliometrics-dev/pybliometrics/issues"
"Documentation (stable)" = "https://pybliometrics.readthedocs.io/en/stable/"
"Documentation (latest)" = "https://pybliometrics.readthedocs.io/en/latest/"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["pybliometrics", "pybliometrics.*"]

[tool.setuptools_scm]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP", "YTT", "ANN", "ASYNC", "BLE", "B", "A", "C4", "DTZ", "T10", "EM", "ERA", "EXE", "FBT", "FA", "ISC", "ICN", "G", "INP", "PIE", "PL", "PT", "Q", "RSE", "RET", "SLF", "TID", "ARG", "PTH", "SIM", "RUF"]
ignore = ["D203", "D212"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]

